# cxadc-capture-server

./: CMakeLists.txt  README.md  cxadc-capture-server  cxadc_vhs_server  local-capture.sh  my_tape-baseband_0msps_24-bit.flac  my_tape-hifi_10msps_8-bit.flac
.github/workflows/: build-and-release.yml
artifacts/cxadc-capture-server-linux-x64/: cxadc-capture-server
src/: files-windows.c  files.c  http-windows.c  http.h  main-windows.c  main.c  version.h  win_compat.c  win_compat.h
